# compilador

./: CMakeLists.txt  automataID.cpp  automataID.h  automataNumEntero.cpp  automataNumEntero.h  automataNumReal.cpp  automataNumReal.h  entrada.txt  main.cpp  palres_simbolos.txt  recorrer_arch.cpp  recorrer_arch.h
